# all-in-one

./: .easignore  README.md
client-expo/: .env.development  .env.production  App.tsx  app.json  (+5 more)
server/: .env  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231015_082108_add_token_to_users.rs  m20231021_103237_create_movie_table.rs  m20231021_190712_update_movie_table.rs  m20231022_120942_add_movie_title_to_movie_table.rs  m20231231_193712_create_lists_table.rs  m20240101_084417_foreign_keys_tables.rs  m20240106_071010_updated_at_timestamp.rs  m20240420_203424_movie_lists_unique_contraint.rs  m20240420_205023_add_number_of_movies_in_lists.rs  m20240615_081608_re_watch.rs  m20240615_130504_series.rs
server/src/: lib.rs  main.rs
server/src/database/: lists.rs  mod.rs  movie_lists.rs  movies.rs  prelude.rs  users.rs
server/src/routes/: guard.rs  mod.rs  users.rs
server/src/routes/backup/: mod.rs  trigger_backup.rs
server/src/routes/expense_tracker/: get_tracked_expense.rs  mod.rs
server/src/routes/movies_tracker/: add_movie_to_lists.rs  add_new_list.rs  add_watched_episodes.rs  add_watched_movies.rs  get_movie_list.rs  get_movie_lists.rs  get_movies.rs  get_season_details.rs  get_watched_movies.rs  get_watchlist_movies.rs  mod.rs  search_movies.rs  update_watched_movies.rs
server/src/scheduler/: backup_scheduler.rs  mod.rs
server/src/services/: r2.rs
server/src/utils/: app_error.rs  format_date.rs  jwt.rs  mod.rs  type_conversion.rs
(+149 files in other folders)
