[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = {path = "./migration"}
axum = { version = "0.7.3"}
dotenv = "0.15.0"
dotenvy_macro = "0.15.7"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
serde_with = "3.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
axum-macros = "0.4.0"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
headers = "0.4.0"
itertools = "0.12.0"
env_logger = "0.11.3"
log = "0.4.21"
tokio-cron-scheduler = "0.10.2"
rust-s3 = "0.33.0"
chrono-tz = "0.9.0"
